--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "itcig/caliban",
     "description": "Utility for reading and writing client session data",
     "type": "library",
-	"license": "Apache-2.0",
+	"license": "MIT",
     "authors": [
         {
             "name": "Brad",
