--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "caliban",
+	"version": "1.0.9",
 	"description": "Caliban session tracker",
 	"repository": {
 		"type": "git",
@@ -15,7 +16,13 @@
 	},
 	"scripts": {
 		"build": "webpack --progress -p --config ./build/webpack.config.js",
+		"changelog": "npx auto-changelog -p --commit-limit false --unreleased --template keepachangelog",
 		"prettier": "prettier --write \"{src,test}/**/*.js\"",
+		"release": "release-it --no-npm.publish",
+		"release:patch": "release-it --ci patch --no-npm.publish",
+		"release:minor": "release-it --ci minor --no-npm.publish",
+		"release:major": "release-it --ci major --no-npm.publish",
+		"release:dry-run": "release-it --dry-run --no-npm.publish",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"lint-staged": {
@@ -50,6 +57,7 @@
 		"lint-staged": "^10.0.2",
 		"prettier": "^1.19.1",
 		"prettier-markdown": "^0.1.8",
+		"release-it": "^12.6.1",
 		"rimraf": "^3.0.0",
 		"terser-webpack-plugin": "^1.3.0",
 		"webpack": "^4.35.0",
