Update changelog on commit

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 	"scripts": {
 		"build": "webpack --progress -p --config ./build/webpack.config.js",
 		"changelog": "npx auto-changelog -p --commit-limit false --unreleased --template keepachangelog --starting-commit 7fe03008f2c6f39f3475808cf6416da008d32fc2",
+		"changelog:commit": "npm run changelog:stage && git commit -m \"chore(changelog): Updated changelog\"",
+		"changelog:stage": "npm run changelog && git add CHANGELOG.md",
 		"prettier": "prettier --write \"{src,test}/**/*.js\"",
 		"release": "release-it --no-npm.publish",
 		"release:patch": "release-it --ci patch --no-npm.publish",
@@ -33,7 +35,7 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "lint-staged && npm run build && git add dist"
+			"pre-commit": "lint-staged && npm run build && git add dist && npm run changelog:stage"
 		}
 	},
 	"dependencies": {},
