--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 	    "itcig/php-helpers": "^1.0",
         "predis/predis": "^1.1",
 	    "oscarotero/env": "^1.1",
-        "vlucas/phpdotenv": "^4.1"
+        "vlucas/phpdotenv": "^4.1",
+        "mustangostang/spyc": "^0.6.3"
     },
 	"autoload": {
 		"psr-4": {
