--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	"prefer-stable": true,
     "require": {
 	    "php": "^7.1",
-	    "itcig/php-helpers": "^1.0",
+	    "itcig/php-helpers": "~1.0",
         "predis/predis": "^1.1",
 	    "oscarotero/env": "^1.1",
         "vlucas/phpdotenv": "^4.1",
