--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
         {
             "name": "Brad",
             "email": "bash@capinfogroup.com"
-        }
+        },
+      {
+        "name": "Francesco Catanzaro",
+        "email": "fcatanzaro@gmail.com"
+      }
     ],
 	"minimum-stability": "dev",
 	"prefer-stable": true,
